--- a/src/components/Card_aboutme.astro
+++ b/src/components/Card_aboutme.astro
@@ -24,7 +24,7 @@
         </button>
 
         <p class="info">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nisi voluptatem inventore aperiam explicabo hic, non dicta? Distinctio eveniet qui modi assumenda reprehenderit porro, tenetur, dolore tempora mollitia ad blanditiis.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo expedita veniam eum dignissimos dicta porro, modi nostrum voluptate quam iure iusto dolore exercitationem ut obcaecati. Fugiat quae incidunt deleniti dolorem.
         </p>
         <div class="skilltab">
             <h2 class="skills">Skills</h6>
