--- a/src/components/Card_home.astro
+++ b/src/components/Card_home.astro
@@ -29,7 +29,7 @@
         });    
     }
     let btn = document.getElementById('button');
-    btn.addEventListener('click', ShowQuote);
+    btn!.addEventListener('click', ShowQuote);
     
 
     
