--- a/src/pages/aboutme2.astro
+++ b/src/pages/aboutme2.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../layouts/Layout.astro"
+import Layout from "../layouts/layout2.astro"
 import About2 from "../components/Card_aboutme2.astro"
 ---
 
