--- a/src/components/Card_aboutme.astro
+++ b/src/components/Card_aboutme.astro
@@ -5,7 +5,7 @@
 <main>
     <div class="aboutme" >
         <svg class="path">
-            <path 
+            <path id="path1"
             d="M 50 50 L 50 650"
             stroke="black" stroke-width="1" fill="black"/>
             <path 
@@ -14,15 +14,16 @@
         </svg>
         <img class="img" src="" alt="">
         <h1 class="Name">About me</h1>
-        <button class="NavButton extra">
-            <svg class="Extra_path">
-                <path 
-                d="M 0 0
-                   L 50 30 
-                   L 100 0" stroke="grey" stroke-width="1" fill="transparent"/>
-            </svg>
-        </button>
-
+        <a href="/aboutme2">
+            <button class="NavButton">
+                <svg class="Extra_path">
+                    <path class="path"
+                    d="M 0 0
+                    L 50 30 
+                    L 100 0" stroke="grey" stroke-width="1" fill="transparent"/>
+                </svg>
+            </button>
+        </a>
         <p class="info">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo expedita veniam eum dignissimos dicta porro, modi nostrum voluptate quam iure iusto dolore exercitationem ut obcaecati. Fugiat quae incidunt deleniti dolorem.
         </p>
@@ -65,6 +66,17 @@
 </main>
 
 <style>
+    @keyframes path1{
+        0% {
+            d: path("M 50 50 L 50 100");
+        }
+        100% {
+            d: path("M 50 50 L 50 650")
+        }
+    }
+    #path1{
+        animation: path1 2s;
+    }
     .path{
         height: 457px;
     }
@@ -81,11 +93,19 @@
         left: 5%;
     }
     .NavButton{
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        margin: 0;
         width: 104px;
         height:34px;
         position: absolute;
         left: 46.5%;
         bottom: 2%;
+    }
+    .NavButton:hover .path{
+        stroke: black;
     }
     .Extra_path{
         width: 100px;
