--- a/src/components/Card_aboutme.astro
+++ b/src/components/Card_aboutme.astro
@@ -1,4 +1,5 @@
 ---
+const props = Astro.props
 
 ---
 
@@ -6,7 +7,7 @@
     <div class="aboutme" >
         <svg class="path">
             <path id="path1"
-            d="M 50 50 L 50 650"
+            d="M 50 50 L 50 450"
             stroke="black" stroke-width="1" fill="black"/>
             <path 
             d="M 50 100 L 350 100"
@@ -25,41 +26,50 @@
             </button>
         </a>
         <p class="info">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo expedita veniam eum dignissimos dicta porro, modi nostrum voluptate quam iure iusto dolore exercitationem ut obcaecati. Fugiat quae incidunt deleniti dolorem.
+            My name is Dylan van der ven. I am 18 years old and I study Webtechnology at ROC Tilburg. 
+            I'd say my skills with HTML, CSS and javascript are quite decent. I'm not that good at back-end developing though.
+            I have followed a course of Photography apart from my study.
+            I am also a big fan of gaming and I like to play games in my free time. 
         </p>
         <div class="skilltab">
             <h2 class="skills">Skills</h6>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="/img/html5.png" alt="HTML">
+                    <p class="SkillText">HTML</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="/img/css3.png" alt="CSS">
+                    <p class="SkillText">CSS</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="/img/javascript.png" alt="JavaScript">
+                    <p class="SkillText">JavaScript</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="/img/php.png" alt="PHP">
+                    <p class="SkillText">PHP</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p></p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" {...props}>
+                        <path fill="currentColor" d="M8.358 20.162c-1.186-1.07-1.532-3.316-1.038-4.944c.856 1.026 2.043 1.352 3.272 1.535c1.897.283 3.76.177 5.522-.678c.202-.098.388-.229.608-.36c.166.473.209.95.151 1.437c-.14 1.185-.738 2.1-1.688 2.794c-.38.277-.782.525-1.175.787c-1.205.804-1.531 1.747-1.078 3.119l.044.148a3.158 3.158 0 0 1-1.407-1.188a3.31 3.31 0 0 1-.544-1.815c-.004-.32-.004-.642-.048-.958c-.106-.769-.472-1.113-1.161-1.133c-.707-.02-1.267.411-1.415 1.09c-.012.053-.028.104-.045.165zm-5.961-4.445s3.24-1.575 6.49-1.575l2.451-7.565c.092-.366.36-.614.662-.614c.302 0 .57.248.662.614l2.45 7.565c3.85 0 6.491 1.575 6.491 1.575L16.088.727C15.93.285 15.663 0 15.303 0H8.697c-.36 0-.615.285-.784.727z" />
+                    </svg>
+                    <p class="SkillText">Astro</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="/img/typescript.png" alt="TypeScript">
+                    <p class="SkillText">TypeScript</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="/img/svelte.png" alt="Svelte">
+                    <p class="SkillText">Svelte</p>
                 </div>
                 <div class="skill">
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="/img/adobeillustrator.png" alt="Illustrator">
+                    <p class="SkillText">Illustrator</p>
+                </div>
+                <div class="skill">
+                    <img src="/img/adobephotoshop.png" alt="Photoshop">
+                    <p class="SkillText">Photoshop</p>
                 </div>
         </div>
         </div>
@@ -71,7 +81,7 @@
             d: path("M 50 50 L 50 100");
         }
         100% {
-            d: path("M 50 50 L 50 650")
+            d: path("M 50 50 L 50 450")
         }
     }
     #path1{
@@ -87,7 +97,7 @@
     }
     .info{
         height: 200px;
-        width: 400px;
+        width: 600px;
         position: absolute;
         top: 20%;
         left: 5%;
@@ -116,5 +126,22 @@
         top: 51%;
         left: 5%;
         display:flex;
+    }
+    .skilltab{
+        height: 40%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        flex-shrink: 6;
+    }
+    .skill{
+        display:flex;
+        flex-direction: row;
+        width: 120px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    .SkillText{
+        width:fit-content;
     }
 </style>
