--- a/src/components/Card_home.astro
+++ b/src/components/Card_home.astro
@@ -3,18 +3,7 @@
 ---
 
 <main>
-    <div class="Home">
-        <svg class="main_svg">
-            <path 
-            d="M 50 50 L 50 100"
-            stroke="black" stroke-width="1" fill="black"/>
-            <path 
-            d="M 50 100 L 350 100"
-            stroke="black" stroke-width="1" fill="black"/>
-        </svg>
     <h1 class="Name">Dylan van der Ven</h1>
-    </div>
-
     <button class="hidden bottom" id="button">Show Breaking bad quote</button>
 </main>
 
@@ -39,6 +28,9 @@
     position: absolute;
     top: 6%;
     left: 4.5%;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
+    padding-left: 5px;
     }
 .hidden{
     border:0;
