--- a/src/components/Card_aboutme.astro
+++ b/src/components/Card_aboutme.astro
@@ -5,16 +5,9 @@ const props = Astro.props
 
 <main>
     <div class="aboutme" >
-        <svg class="path">
-            <path id="path1"
-            d="M 50 50 L 50 450"
-            stroke="black" stroke-width="1" fill="black"/>
-            <path 
-            d="M 50 100 L 350 100"
-            stroke="black" stroke-width="1" fill="black"/>
-        </svg>
-        <img class="img" src="" alt="">
-        <h1 class="Name">About me</h1>
+        <div class="Anim">
+            <h1 class="Name">About me</h1>
+        </div>
         <a href="/aboutme2">
             <button class="NavButton">
                 <svg class="Extra_path">
@@ -78,10 +71,10 @@ const props = Astro.props
 <style>
     @keyframes path1{
         0% {
-            d: path("M 50 50 L 50 100");
+            height: 55px;
         }
         100% {
-            d: path("M 50 50 L 50 450")
+            height: 415px;
         }
     }
     #path1{
@@ -91,9 +84,19 @@ const props = Astro.props
         height: 457px;
     }
     .Name{
-    position: absolute;
-    top: 6%;
-    left: 4.5%;
+    border-bottom: 2px solid black;
+    margin:0px;
+    padding: 5px;
+    }
+    .Anim{
+        animation: path1 1s;
+        position: absolute;
+        left: 4.5%;
+        top: 6%;
+        height: 415px;
+        width: 200px;
+        border-left: 2px solid black;
+        padding:0;
     }
     .info{
         height: 200px;
