--- a/src/components/Card_contact.astro
+++ b/src/components/Card_contact.astro
@@ -4,16 +4,8 @@
 
 <main>
     <div class="contact block" id="block4">
-        <svg class="main_svg">
-            <path 
-            d="M 50 50 L 50 100"
-            stroke="black" stroke-width="1" fill="black"/>
-            <path 
-            d="M 50 100 L 350 100"
-            stroke="black" stroke-width="1" fill="black"/>
-        </svg>
+        
         <h1 class="Name">Contact Me</h1>
-        </div>
 
         <a href="https://github.com/Dylan-Ven">
             <article class="H100 W500 ArtGrid Art1">
@@ -49,6 +41,9 @@
     position: absolute;
     top: 6%;
     left: 4.5%;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
+    padding-left: 5px;
     }
    
     .contactpoint{
