Update #I lost count
Updated about me description,
added a project

--- a/src/components/Card_aboutme.astro
+++ b/src/components/Card_aboutme.astro
@@ -19,10 +19,13 @@ const props = Astro.props
                 </button>
             </a>
             <p class="info">
-                My name is Dylan van der ven. I am 18 years old and I study Webtechnology at ROC Tilburg. 
-                I'd say my skills with HTML, CSS and javascript are quite decent. I'm not that good at back-end developing though.
-                I have followed a course of Photography apart from my study.
-                I am also a big fan of gaming and I like to play games in my free time. 
+                    My name is Dylan van der Ven, I am 18 years old and I am a student at the ROC in Tilburg,
+                    I am currently studying Web- and Software Technology and I am in my second year.
+                    I am a very motivated student and I am always looking for new challenges. My passions within Web- and Software Technology
+                    are Front-end development, Design and API / Application security.<br>
+                    I am always looking for new ways to improve my skills and I am thinking about new designs for projects.<br>
+                    I recently started learning how to find vulnerabilities in websites. because it is what currently peaks my interest the most.<br><br>
+                    in my spare time I like to play games, go out with friends and start my own little projects.<br>
             </p>
             <div class="skilltab">
                 <h2 class="skills">Skills</h6>
@@ -112,8 +115,8 @@ const props = Astro.props
         padding:0;
     }
     .info{
-        height: 200px;
-        width: 600px;
+        height: 20vh;
+        width: 55vw;
         position: absolute;
         top: 20%;
         left: 5%;
@@ -140,7 +143,7 @@ const props = Astro.props
     .skilltab{
         position: absolute;
         top: 51%;
-        left: 5%;
+        left: 5.5%;
         display:flex;
     }
     .skilltab{
@@ -159,5 +162,8 @@ const props = Astro.props
     }
     .SkillText{
         width:fit-content;
+    }
+    .Mtop{
+        margin-top: 10px;
     }
 </style>
