Removed stuff from homescreen, Added projects

--- a/src/components/Card_projects.astro
+++ b/src/components/Card_projects.astro
@@ -27,7 +27,7 @@
     <h1 class="Name w250">Projects</h1>
 
     <div class="info hidden" id="P1">
-        <h3 class="em3">Portfolio</h3>
+        <h3 class="em3">Portfolio V1.0 (You're here)</h3>
         <a  class="RR HL"href="https://github.com/Dylan-Ven/Portfolio_1">show code</a>
         <p>This is my current portfolio, I am very proud of this project,
             I have learnt and used the Astro Framework for this project. <br><br>
@@ -42,14 +42,38 @@
         </ul>
     </div>
         <div class="info hidden" id="P2">
-        <h3></h3>
-        <a href=""><button>show code</button></a>
-        <p></p>
+        <h3>P4 WebDev game (better known as Bali) V0.7</h3>
+        <a class="RR HL" href="https://github.com/maciejphp/game"><button>show code</button></a>
+        <a class="RR HL" href="https://maciejphp.github.io/game/"><button>Go to page</button></a>
+        <p>In the 4th Period of my 2nd year in school. I was tasked to make a videogame, from scratch. I paired up
+            with a couple of friends and we made a game called Bali. <br><br>
+            The game is multiplayer and the goal is to push the other people off. As of right now there is no ending.
+            We're still working on it
+        </p>
+        <h3>Languages Used:</h3>
+        <ul>
+            <li>Html</li>
+            <li>JavaScript / THREEjs library</li>
+        </ul>
     </div>
         <div class="info hidden" id="P3">
-            <h3></h3>
-            <a href=""><button>show code</button></a>
-            <p></p>
+            <h3>Woordle V0</h3>
+            <a class="RR HL" href="https://github.com/maciejphp/woordle"><button>show code</button></a>
+            <p>
+            Woordle is another school project where we had to create a game. We could choose between a couple of games: <br> 
+            Hangman, Wordle or a typing course. We chose Wordle, but wanted to make it with our own twist.
+            so, instead of guessing five letter words. You have to guess six letter words <br>
+            We wanted to give our own spin on it, we are working on adding a score system and a leaderboard.
+            </p>
+            <h3>Languages Used:</h3>
+        <ul>
+            <li>Html</li>
+            <li>CSS / SCSS</li>
+            <li>JavaScript</li>
+            <li>PHP</li>
+            <li>SQL</li>
+
+        </ul>
     </div>
         <div class="info hidden" id="P4">
             <h3></h3>
@@ -72,12 +96,14 @@
         <button onclick="toggleVisibility('P1')" class="Bbottom">
             <p>Portfolio-1</p>
         </button>
-         <!-- <button onclick="toggleVisibility('P2')" class="Bbottom">
-            <p>Projectname</p>
+        <button onclick="toggleVisibility('P2')" class="Bbottom">
+            <p>Game</p>
         </button>
+        
         <button onclick="toggleVisibility('P3')" class="Bbottom">
-            <p>Projectname</p>
+            <p>Woordle</p>
         </button>
+        <!-- 
         <button onclick="toggleVisibility('P4')" class="Bbottom">
             <p>Projectname</p>
         </button>
