small size update

--- a/src/components/Card_projects.astro
+++ b/src/components/Card_projects.astro
@@ -42,7 +42,7 @@
         </ul>
     </div>
         <div class="info hidden" id="P2">
-        <h3>P4 WebDev game (better known as Bali) V0.7</h3>
+        <h3 class="em3">P4 WebDev game (better known as Bali) V0.7</h3>
         <a class="RR HL" href="https://github.com/maciejphp/game"><button>show code</button></a>
         <a class="RR HL" href="https://maciejphp.github.io/game/"><button>Go to page</button></a>
         <p>In the 4th Period of my 2nd year in school. I was tasked to make a videogame, from scratch. I paired up
@@ -57,7 +57,7 @@
         </ul>
     </div>
         <div class="info hidden" id="P3">
-            <h3>Woordle V0</h3>
+            <h3 class="em3">Woordle V0</h3>
             <a class="RR HL" href="https://github.com/maciejphp/woordle"><button>show code</button></a>
             <p>
             Woordle is another school project where we had to create a game. We could choose between a couple of games: <br> 
