--- a/src/components/Card_aboutme2.astro
+++ b/src/components/Card_aboutme2.astro
@@ -24,7 +24,10 @@
                 <p>15/07/2023 - 27/08/2023, Tirage Art > Allround Employee</p>
             </li>
             <li>
-                <p>11/09/2023 - Now, Albert Heijn > Stock clerk</p>
+                <p>26/08/2024 - 24/01/2025, MaMa Producties > Stagair</p> 
+            </li>
+            <li>
+                <p>11/09/2023 - Now, Albert Heijn > Allround Employee</p>
             </li>
         </ul>
     </div>    
