--- a/src/components/Card_projects.astro
+++ b/src/components/Card_projects.astro
@@ -76,9 +76,17 @@
         </ul>
     </div>
         <div class="info hidden" id="P4">
-            <h3></h3>
-            <a href=""><button>show code</button></a>
-            <p></p>
+            <h3>Food Memory</h3>
+            <a href="https://github.com/Dylan-Ven/Challenge-Game" class="RR HL"><button>show code</button></a>
+            <p>
+                Food memory is a mobile web-based game that another developer and myself have developed to create awareness about food waste. <br><br>
+                The game is a memory game where you have to match the food with eachother and if you match the correct ones, you get a tip about what you can do instead of throwing it out (if its not past its expiration date) <br><br>
+            </p>
+            <h3>Languages Used:</h3>
+            <ul>
+                <li>Html</li>
+                <li>CSS / SCSS</li>
+                <li>JavaScript</li>
     </div>
         <div class="info hidden" id="P5">
             <h3></h3>
@@ -97,16 +105,17 @@
             <p>Portfolio-1</p>
         </button>
         <button onclick="toggleVisibility('P2')" class="Bbottom">
-            <p>Game</p>
+            <p>Bali</p>
         </button>
         
         <button onclick="toggleVisibility('P3')" class="Bbottom">
             <p>Woordle</p>
         </button>
-        <!-- 
+       
         <button onclick="toggleVisibility('P4')" class="Bbottom">
-            <p>Projectname</p>
+            <p>Food Memory</p>
         </button>
+        <!-- 
         <button onclick="toggleVisibility('P5')" class="Bbottom">
             <p>Projectname</p>
         </button>
