--- a/src/components/Card_aboutme.astro
+++ b/src/components/Card_aboutme.astro
@@ -19,15 +19,13 @@ const props = Astro.props
                 </button>
             </a>
             <p class="info">
-                    My name is Dylan van der Ven, I am 18 years old and I am a student at the ROC in Tilburg,
-                    I am currently studying Web- and Software Technology and I am in my second year.
-                    I am a very motivated student and I am always looking for new challenges. My passions within Web- and Software Technology
-                    are Front-end development, Design and API / Application security.<br>
-                    I am always looking for new ways to improve my skills and I am thinking about new designs for projects.<br>
-                    I recently started learning how to find vulnerabilities in websites. because it is what currently peaks my interest the most.<br><br>
-                    in my spare time I like to play games, go out with friends and start my own little projects.<br>
+                    My name is Dylan van der Ven, I am 19 years old and I am a student at the ROC in Tilburg, I am currently studying Web- and Software Technology and I am in my third year. I am a very motivated student and I am always looking for new challenges. My passions within Web- and Software Technology are both Front and Backend development and API / Application security.
+                    I am always looking for new ways to improve my skills and I am thinking about new designs for projects.
+                    I recently started learning how to use MongoDB and how to test my own API's with Postman and similar platforms.<br><br>
+
+                    in my spare time I like to play games, go out with friends and start my own little projects. 
             </p>
-            <div class="skilltab">
+            <!-- <div class="skilltab">
                 <h2 class="skills">Skills</h6>
                     <div class="skill">
                         <img src="/img/html5.png" alt="HTML">
@@ -67,7 +65,32 @@ const props = Astro.props
                         <img src="/img/adobephotoshop.png" alt="Photoshop">
                         <p class="SkillText">Photoshop</p>
                     </div>
+            </div> -->
+            <div id="Languages">
+                <h1>Languages / Frameworks</h1>
+                <div class="Languages_Container">
+                    <div class="Languages">
+                        <h2>Languages</h2>
+                        <p>HTML  ■■■■□</p>
+                        <p>CSS ■■■■□</p>
+                        <p>JavaScript ■■■■□</p>
+                        <p>PHP ■■■□□</p>
+                        <p>SQL ■■■□□</p>
+                        <p>C ■□□□□</p>
+    
+                    </div>
+                    <div class="Frameworks_Container">
+                        <h2>Frameworks</h2>
+                        <p>Express.js ■■■□□</p>
+                        <p>React.js ■■□□□</p>
+                        <p>Astro ■■□□□</p>
+                        <p>laravel ■□□□□</p>
+                        <p>Bootstrap ■□□□□</p>
+                        <p>Node.js ■□□□□</p>
+                    </div>
+                </div>
             </div>
+        </div>
             <div class="IMAGEl PIB">
                 <img class="IMAGEl" src="/img/Dylan2.JPG" alt="me">
             </div>
@@ -147,7 +170,7 @@ const props = Astro.props
         width: 100px;
         height: 50px;
     }
-    .skilltab{
+    /* .skilltab{
         position: absolute;
         top: 51%;
         left: 5.5%;
@@ -169,6 +192,22 @@ const props = Astro.props
     }
     .SkillText{
         width:fit-content;
+    } */
+    #Languages{
+        width: 65%;
+        position: absolute;
+        bottom: 10%;
+        left: 5%
+    }
+    .Languages_Container{
+        display: flex;
+        justify-content: space-between;
+    }
+    .Languages{
+        width: 49%;
+    }
+    .Frameworks_Container{
+        width: 49%;
     }
     .Mtop{
         margin-top: 10px;
